--- a/index.html
+++ b/index.html
@@ -23,58 +23,80 @@
             </div>
         </div>
         <div class="main black">
-            <h1 class="">Profile</h1>
-            <p>15歳、学生。言語(HTML , CSS , JS , Python)が少しだけ触れる上、簡単な動画が作れる(Aviutl,YMM4)</p>
+            <h1>Profile</h1>
+            <p>15歳、学生。言語が少しだけ触れる上、簡単な動画が作れる(Aviutl,YMM4)</p>
+            <h1>Softwares</h1>
+
+            <h2>使用できるソフトウェア</h2>
+            <div class="worksbase">
+                <div class="works">
+                    <h3>Programme*</h3>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>Python</li>
+                    </ul>
+                </div>
+                <div class="works">
+                    <h3>Movie</h3>
+                    <ul>
+                        <li>Aviutl</li>
+                        <li>Yukkuri Movie Maker 4</li>
+                    </ul>
+                </div>
+            </div>
+            <h6 class="addition">*プログラミング言語でないものを含みます。</h6>
         </div>
         <div class="main">
             <h1 class="">Works</h1>
             <div class="worksbase">
-            <div class="works">
-                <h2>Web</h2>
-                <div class="work">
-                    <a href="https://halo-software.github.io/notes" target="_blank">
-                        <h3>Halo Official Web Site</h3>
-                    </a>
-                    <p>所属する団体、Haloのホームページ。</p>
-                    <img src="" alt="画像挿入予定">
-                    <p>使用しているテクノロジー</p>
-                    <ul>
-                        <li>Bootstrap</li>
-                        <li>Github Pages</li>
-                        <li>Google Analytics</li>
-                        <li>Google Fonts</li>
-                    </ul>
+                <div class="works">
+                    <h2>Web</h2>
+                    <div class="work">
+                        <a href="https://halo-software.github.io/notes" target="_blank">
+                            <h3>Halo Official Web Site</h3>
+                        </a>
+                        <p>所属する団体、Haloのホームページ。</p>
+                        <img src="" alt="画像挿入予定">
+                        <p>使用しているテクノロジー</p>
+                        <ul>
+                            <li>Bootstrap</li>
+                            <li>Github Pages</li>
+                            <li>Google Analytics</li>
+                            <li>Google Fonts</li>
+                        </ul>
+                    </div>
+                    <div class="work">
+                        <a href="https://example.com" target="_blank">
+                            <h3>About:ichi</h3>
+                        </a>
+                        <p>ichiのポートフォリオ(このサイト)</p>
+                        <p>使用しているテクノロジー</p>
+                        <ul>
+                            <li>Google Fonts</li>
+                            <li>Github Pages</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="work">
-                    <a href="example.com" target="_blank">
-                        <h3>About:ichi</h3>
-                    </a>
-                    <p>ichiのポートフォリオ(このサイト)</p>
-                    <p>使用しているテクノロジー</p>
-                    <ul>
-                        <li>Google Fonts</li>
-                        <li>Github Pages</li>
-                    </ul>
+                <div class="works">
+                    <h2>Movie</h2>
+                    <div class="work">
+                        <h3>放送部 部活動紹介 2022年度版</h3>
+                        <p>所属する部活動の紹介映像。</p>
+                        <img src="" alt="サムネイル表示予定">
+                        <p>使用しているテクノロジー</p>
+                        <ul>
+                            <li>Aviutl</li>
+                            <li>Google Fonts</li>
+                            <li>SoundEngine Free</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div class="works">
-                <h2>Movie</h2>
-                <div class="work">
-                    <h3>放送部 部活動紹介 2022年度版</h3>
-                    <p>所属する部活動の紹介映像。</p>
-                    <img src="" alt="サムネイル表示予定">
-                    <p>使用しているテクノロジー</p>
-                    <ul>
-                        <li>Aviutl</li>
-                        <li>Google Fonts</li>
-                        <li>SoundEngine Free</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
         </div>
         <div class="main black">
-            <h1 class="">SNS,Contact</h1>
+            <h1 class="">SNS/Contact</h1>
             <h1 style="text-align: center;">Follow me on SNS!</h1>
             <a href="https://twitter.com/lchl_01" class="sns" target="_blank">
                 <h1 class="fa-brands fa-twitter"></h1>
@@ -93,7 +115,29 @@
         </div>
         <!--Footer?-->
         <div class="dot">
-            <a href="https://twitter.com/lchl_01" target="_blank"> <i class="fa-brands fa-twitter dottxt"></i></a>
+            <div class="hamburger-menu">
+                <input type="checkbox" id="menu-btn-check">
+                <label for="menu-btn-check" class="menu-btn"><span></span></label>
+                <div class="menu-content">
+                    <ul><i>
+                            <li>
+                                <a href="#">
+                                    <h1>Main Page</h1>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <h1>Page (2)</h1>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <h1>Page (3)</h1>
+                                </a>
+                            </li>
+                        </i> </ul>
+                </div>
+            </div>
         </div>
     </div>
 </body>
